# first-haskell-app

./: .gitignore  CHANGELOG.md  config.yaml  first-api.cabal  tasks.db
app/: Main.hs  TasksActions.hs  TasksDomain.hs  TasksRepository.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
