cabal-version:      2.4
name:               first-api
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             hermione
maintainer:         hermione@hog.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable first-api
    main-is:          Main.hs
    other-modules:      TasksRepository
                      , TasksActions 
                      , TasksDomain 

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , scotty
                    , aeson
                    , text
                    , yaml
                    , bytestring
                    , wai
                    , wai-extra
                    , sqlite-simple
    hs-source-dirs:   app
    default-language: Haskell2010
